test/typechecker.d/invalid/sub2.souc.bad
main(): IO = do
	puts ; needs an argument!
